--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,7 @@ MONGO_DB_URI=mongodb://127.0.0.1:27017/<project_name>
 CORS_ORIGINS=http://localhost:5173
 GLOBAL_RATE_LIMIT_MINUTES=15
 GLOBAL_RATE_LIMIT_MAX=100
+
+# JWT
+JWT_ACCESS_TOKEN=value
+JWT_REFRESH_TOKEN=value
