--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,7 @@ GLOBAL_RATE_LIMIT_MAX=100
 # JWT
 JWT_ACCESS_TOKEN=value
 JWT_REFRESH_TOKEN=value
+
+# Token
+REFRESH_COOKIE_NAME=value
+REFRESH_COOKIE_PATH=value
